write logo for Add page doesnt show up on iphones, trying potetial fix.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,7 +68,7 @@ hr{
 
 #log{
   margin-top: 50%;
-  margin-bottom: 25%;
+  margin-bottom: 35%;
 }
 
 #backlogObj{
@@ -104,7 +104,7 @@ hr{
   width:22%;
   position: fixed;
   margin-left: 70%;
-  margin-top: 145%;
+  margin-top: 50%;
 }
 
 #accountLogo{
